- add navgtionbottom - genral edting

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#DA0303</color>
     <color name="yallow">#FFFF00</color>
+    <color name="yallow2">#EAEA56</color>
 </resources>
