-add MoreDetails Activity - dashboard -

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,9 +26,9 @@
     </fragment>
     <fragment
         android:id="@+id/profile_nv"
-        android:name="com.amroz.ystore.Fragments.UsersFragment"
+        android:name="com.amroz.ystore.Fragments.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_users" >
+        tools:layout="@layout/fragment_profile" >
 
     </fragment>
 
