--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,7 +10,27 @@
         android:name="com.amroz.ystore.Fragments.ProductsFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_products" >
-//
+
+
+        <action
+            android:id="@+id/action_products_nv_to_proByCat"
+            app:destination="@id/proByCat" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/cart_nv"
+        android:name="com.amroz.ystore.Fragments.CartFragment"
+        android:label="@string/title_cart"
+        tools:layout="@layout/fragment_cart" >
+
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/proByCat"
+        android:name="com.amroz.ystore.Fragments.ProductByCatFragment"
+        android:label="@string/title_proByCat"
+        tools:layout="@layout/fragment_product_by_cat">
 
     </fragment>
 
@@ -19,11 +39,8 @@
         android:name="com.amroz.ystore.Fragments.Catogrey_Fragment"
         android:label="@string/title_cats"
         tools:layout="@layout/fragment_catogrey" >
-
-
-
-
     </fragment>
+
     <fragment
         android:id="@+id/profile_nv"
         android:name="com.amroz.ystore.Fragments.UsersFragment"
