--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,10 +87,11 @@
                 <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/password"
                     android:layout_marginTop="11.7dp"
                     android:background="@android:color/transparent"
                     android:inputType="textPassword"
-                    android:maxLength="10"
+                    android:maxLength="20"
                     android:maxLines="1"
                     android:paddingRight="44.3dp"
                     android:textColor="#000000"
