--- a/app/src/main/res/layout/activity_more_details.xml
+++ b/app/src/main/res/layout/activity_more_details.xml
@@ -21,6 +21,65 @@
             app:layout_collapseMode="parallax"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/orderdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:gravity="center|left"
+                android:paddingLeft="15dp"
+                android:text="Date order">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/owner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|left"
+                android:paddingLeft="15dp"
+                android:text="sold by  oamr">
+
+            </TextView>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/spacing_middle"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Description"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/grey_90" />
+
+                <TextView
+                    android:id="@+id/deatils"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_medium"
+                    android:text="About this item
+6.1-inch Super Retina XDR display
+Ceramic Shield, tougher than any smartphone glass
+A14 Bionic chip, the fastest chip ever in a smartphone
+Advanced dual-camera system with 12MP Ultra Wide and"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/grey_60" />
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
     </LinearLayout>
 
 
@@ -168,65 +227,6 @@
 
                                 </LinearLayout>
 
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/orderdate"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center|left"
-                                    android:paddingLeft="15dp"
-                                    android:layout_marginBottom="5dp"
-                                    android:text="Date order">
-
-                                </TextView>
-
-                                <TextView
-                                    android:id="@+id/owner"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center|left"
-                                    android:paddingLeft="15dp"
-                                    android:text="sold by  oamr">
-
-                                </TextView>
-
-                                <LinearLayout
-
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="@dimen/spacing_middle"
-                                    android:orientation="vertical">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Description"
-                                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                                        android:textColor="@color/grey_90" />
-
-                                    <TextView
-                                        android:id="@+id/deatils"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginTop="@dimen/spacing_medium"
-                                        android:text="About this item
-6.1-inch Super Retina XDR display
-Ceramic Shield, tougher than any smartphone glass
-A14 Bionic chip, the fastest chip ever in a smartphone
-Advanced dual-camera system with 12MP Ultra Wide and"
-                                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                                        android:textColor="@color/grey_60" />
-
-
-                                </LinearLayout>
-
-
-                            </LinearLayout>
 
                         </LinearLayout>
 
@@ -539,9 +539,7 @@ Advanced dual-camera system with 12MP Ultra Wide and"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:orientation="horizontal">
-
-
+                        android:orientation="vertical">
 
                         <RatingBar
                             android:id="@+id/ratingProduct"
@@ -549,9 +547,10 @@ Advanced dual-camera system with 12MP Ultra Wide and"
                             android:layout_height="46dp"
                             android:layout_gravity="center"
                             android:layout_margin="40dp"
-                            android:numStars="5"
-                            android:progressDrawable="@drawable/ic_haert_rating"
-                            android:rating="0"
+                            android:numStars="3"
+                            android:rating="3"
+                            android:outlineSpotShadowColor="@color/yellow_400"
+                            android:outlineAmbientShadowColor="@color/yellow_400"
                             android:stepSize="0.5" />
                         <RatingBar
                             android:id="@+id/ratingShow_rb"
@@ -559,9 +558,10 @@ Advanced dual-camera system with 12MP Ultra Wide and"
                             android:layout_height="46dp"
                             android:layout_gravity="center"
                             android:layout_margin="40dp"
-                            android:numStars="5"
-                            android:progressDrawable="@drawable/ic_haert_rating"
-                            android:rating="0"
+                            android:numStars="3"
+                            android:rating="3"
+                            android:outlineSpotShadowColor="@color/yellow_400"
+                            android:outlineAmbientShadowColor="@color/yellow_400"
                             android:stepSize="0.5" />
 
                         <ImageButton
