--- a/app/src/main/res/layout/chat_list.xml
+++ b/app/src/main/res/layout/chat_list.xml
@@ -29,7 +29,7 @@
             android:id="@+id/image"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/ic_photo"
+            android:src="@drawable/ic_baseline_shopping_cart_24"
             app:civ_border="true"
             app:civ_border_color="@android:color/white"
             app:civ_border_width="0dp"
