--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -233,20 +233,20 @@
 
             <ImageButton
                 android:id="@+id/sittings"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/ic_nav">
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/sitting2">
 
             </ImageButton>
             <androidx.cardview.widget.CardView
                 android:id="@+id/search_bar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="40dp"
                 android:clipToPadding="false"
                 app:cardBackgroundColor="@android:color/white"
                 app:cardCornerRadius="8dp"
-                android:layout_margin="15dp"
+                android:layout_margin="20dp"
                 android:visibility="visible"
                 app:cardElevation="1dp"
                 app:layout_constraintEnd_toEndOf="parent"
