--- a/app/src/main/res/layout/item_message_to.xml
+++ b/app/src/main/res/layout/item_message_to.xml
@@ -4,93 +4,85 @@
     android:id="@+id/lyt_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/spacing_xsmall"
     android:paddingLeft="@dimen/spacing_middle"
     android:paddingRight="@dimen/spacing_middle"
     android:paddingTop="@dimen/spacing_xsmall">
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/spacing_medium"
-        android:text="02:30 AM"
-        android:textColor="@color/grey_80"
-        android:textSize="12sp" />
-
     <LinearLayout
-        android:layout_gravity="right"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:gravity="end|right"
+        android:orientation="vertical">
 
-        <View
-            android:layout_width="@dimen/spacing_xmedium"
-            android:layout_height="0dp" />
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start|left"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:padding="@dimen/spacing_medium"
+            android:text="02:30 AM"
+            android:textColor="@color/grey_40"
+            android:textSize="12sp" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="32dp"
-                app:cardBackgroundColor="@color/orange_500"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="0dp"
-                app:cardUseCompatPadding="false">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="32dp"
+            app:cardBackgroundColor="#448AFF"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp"
+            app:cardUseCompatPadding="false">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:paddingBottom="@dimen/spacing_medium"
-                    android:paddingLeft="@dimen/spacing_large"
-                    android:paddingRight="@dimen/spacing_large"
-                    android:paddingTop="@dimen/spacing_medium">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/spacing_medium"
+                android:paddingLeft="@dimen/spacing_large"
+                android:paddingRight="@dimen/spacing_large"
+                android:paddingTop="@dimen/spacing_medium">
 
-                    <TextView
+                <TextView
+                    android:id="@+id/text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Message content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@android:color/white"
+                    android:textStyle="normal" />
 
-                        android:id="@+id/text_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Message content"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:textColor="@color/colorWhite"
-                        android:textStyle="normal" />
+            </LinearLayout>
 
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/lyt_read"
-            android:layout_width="@dimen/spacing_middle"
-            android:layout_height="@dimen/spacing_middle"
-            android:layout_gravity="bottom"
-            android:layout_marginEnd="@dimen/spacing_medium"
-            android:layout_marginRight="@dimen/spacing_medium"
-            android:layout_marginTop="@dimen/spacing_small" />
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/image"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/ic_photo"
-            app:civ_border="true"
-            app:civ_border_color="@android:color/white"
-            app:civ_border_width="0dp"
-            app:civ_shadow="true"
-
-            app:civ_shadow_radius="0" />
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="@dimen/spacing_medium"
+        android:layout_height="0dp" />
+
+    <RelativeLayout
+        android:id="@+id/lyt_read"
+        android:layout_width="@dimen/spacing_middle"
+        android:layout_height="@dimen/spacing_middle"
+        android:layout_gravity="bottom">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/shape_circle"
+            android:tint="#0382FE" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/spacing_xsmall"
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_done" />
+
+    </RelativeLayout>
 
 </LinearLayout>
