--- a/app/src/main/res/layout/fragment_catogrey.xml
+++ b/app/src/main/res/layout/fragment_catogrey.xml
@@ -36,7 +36,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="77dp"
-            android:background="@color/amber_400"
+            android:layout_margin="5dp"
+            android:background="@drawable/bottom_raduse"
             app:contentInsetStartWithNavigation="0dp"
             app:layout_constraintBottom_toTopOf="@+id/products_rec"
             app:layout_constraintEnd_toEndOf="parent"
