--- a/app/src/main/res/drawable/bottom_raduse.xml
+++ b/app/src/main/res/drawable/bottom_raduse.xml
@@ -3,7 +3,7 @@
 
 
     <solid android:color="@color/amber_400"></solid>
-    <corners android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp"></corners>
+    <corners android:radius="8dp"
+        ></corners>
 
 </shape>
