--- a/app/src/main/res/layout/profile_list.xml
+++ b/app/src/main/res/layout/profile_list.xml
@@ -30,8 +30,8 @@
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="25dp"
                 android:src="@drawable/ii"
                 app:civ_border="true"
@@ -146,30 +146,33 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:id="@+id/dashbourd"
+
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:layout_weight="1"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:padding="15dp">
-
-                    <ImageButton
-                        android:layout_width="?attr/actionBarSize"
-                        android:layout_height="?attr/actionBarSize"
-                        android:background="@android:color/transparent"
-                        android:tint="@color/grey_20"
-                        app:srcCompat="@drawable/ic_border_outer" />
+                   >
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Dashbourd"
+                        android:text="Stauts"
+                        android:layout_margin="5dp"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                         android:textColor="@color/colorPrimary" />
+
+                    <ImageButton
+                        android:id="@+id/Your_Reports"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:background="@android:color/transparent"
+
+                        android:backgroundTint="@color/yallow2"
+                        app:srcCompat="@drawable/status" />
 
                 </LinearLayout>
 
@@ -178,33 +181,6 @@
                     android:layout_height="match_parent"
                     android:background="@color/grey_5" />
 
-                <LinearLayout
-                    android:id="@+id/products"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="15dp">
-
-                    <ImageButton
-                        android:layout_width="?attr/actionBarSize"
-                        android:layout_height="?attr/actionBarSize"
-                        android:background="@android:color/transparent"
-                        android:tint="@color/grey_20"
-                        app:srcCompat="@drawable/ic_border_outer" />
-
-                    <TextView
-                        android:id="@+id/my_product"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Products"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                        android:textColor="@color/colorPrimary" />
-
-                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
