--- a/app/src/main/res/layout/userreports_ltem.xml
+++ b/app/src/main/res/layout/userreports_ltem.xml
@@ -48,10 +48,10 @@
 
             </TextView>
             <TextView
-                android:id="@+id/quantity"
+                android:id="@+id/type"
                 android:layout_width="0dp"
                 android:layout_weight="2"
-                android:text="0"
+                android:text="sell"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="15sp"
